--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "standard && node my-tests.js"
+    "test": "standard && node my-tests.js",
+    "deploy": "npm run build && aws s3 sync ./dist s3://www.ivangomez.dev/ --delete"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.6.2",
     "react-type-animation": "^3.2.0",
     "typed.js": "^2.1.0"
   },
@@ -30,6 +32,8 @@
     "vite": "^5.2.0"
   },
   "eslintConfig": {
-    "extends": ["standard"]
+    "extends": [
+      "standard"
+    ]
   }
 }
