--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.2",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "typed.js": "^2.1.0"
   },
